I didnt know this was so easy in js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Hello World!</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+
+    <div class="location">
+        <h1 class="location-timezone">Timezone</h1>
+        <p>Icon</p>
+    </div>
+    <div class="temperature">
+        <div class="degree-section">
+            <h2 class="temperature-degree">666</h2>
+        </div>
+        <div class="temperature-description">Its friggin haht oot here, eh</div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
