--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <div id="issueList">
             </div>
         </div>
+        <div class="footer">
+            <p>&copy BucketMeadow, LLC</p>
+        </div>
     </div>
 
     <script src="https://chancejs.com/chance.min.js"></script>
