--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Hello World!</title>
 </head>
-<body>
+<body onload="fetchIssues()">
     <div class="container">
         <h1>Issue Tracker <small class="text-muted">by ME</small></h1>
         <div class="jumbotron">
@@ -19,9 +19,9 @@
                 <div class="form-group">
                     <label for="severityInput">Severity</label>
                     <select id="severityInput" class="form-control">
-                        <option value="low">Low</option>
-                        <option value="medium">Medium</option>
-                        <option value="high">High</option>
+                        <option value="Low">Low</option>
+                        <option value="Medium">Medium</option>
+                        <option value="High">High</option>
                     </select>
                 </div>
                 <div class="form-group">
