--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Hello World!</title>
 </head>
 <body onload="fetchIssues()">
-    <div class="container">
+    <div class="container" id="page-content">
         <h1>Issue Tracker <small class="text-muted">by ME</small></h1>
         <div class="jumbotron">
             <h3>Add New Issue:</h3>
@@ -35,15 +36,18 @@
             <div id="issueList">
             </div>
         </div>
-        <div class="footer">
-            <p>&copy BucketMeadow, LLC</p>
-        </div>
     </div>
+
+    <footer id="sticky-footer" class='mb-3'>
+        <div class="container">
+            <span class="text-muted">&copy BucketMeadow, LLC</span>
+        </div>
+    </footer>
 
     <script src="https://chancejs.com/chance.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
