changing title to test CI

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <div class="container" id="page-content">
         <h1>Issue Tracker <small class="text-muted">by ME</small></h1>
         <div class="jumbotron">
-            <h3>Add New Issue:</h3>
+            <h3>Tell me about your problems:</h3>
             <form id="issueInputForm">
                 <div class="form-group">
                     <label for="issueDescInput">Description</label>
