--- a/public/index.html
+++ b/public/index.html
@@ -3,51 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Hello World!</title>
+    <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <title>Book List</title>
 </head>
-<body onload="fetchIssues()">
-    <div class="container" id="page-content">
-        <h1>Issue Tracker <small class="text-muted">by ME</small></h1>
-        <div class="jumbotron">
-            <h3>Tell me about your problems:</h3>
-            <form id="issueInputForm">
-                <div class="form-group">
-                    <label for="issueDescInput">Description</label>
-                    <input type="text" id="issueDescInput" class="form-control" placeholder="Describe the issue ...">
-                </div>
-                <div class="form-group">
-                    <label for="severityInput">Severity</label>
-                    <select id="severityInput" class="form-control">
-                        <option value="Low">Low</option>
-                        <option value="Medium">Medium</option>
-                        <option value="High">High</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="asigneeInput">Asignee</label>
-                    <input type="text" id="asigneeInput" class="form-control">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-        <div class="col-lg-12">
-            <div id="issueList">
+<body>
+    <div class="container mt-4 text-center">
+        <h1 class="display-4"><i class="fas fa-book-open text-primary m-2"></i>My<span class="text-primary">Book</span>List</h1>
+        <form id="book-form">
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input type="text" id="title" class="form-control">
             </div>
-        </div>
+            <div class="form-group">
+                <label for="author">Author</label>
+                <input type="text" id="author" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="isbn">ISBN</label>
+                <input type="text" id="isbn" class="form-control">
+            </div>
+            <input type="submit" value="Add" class="btn btn-primary btn-block">
+            <table class="table table-striped mt-5">
+                <thead>
+                    <tr>
+                        <th>Title</th>
+                        <th>Author</th>
+                        <th>ISBN#</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody id="book-list"></tbody>
+            </table>
+        </form>
     </div>
-
-    <footer id="sticky-footer" class='mb-3'>
-        <div class="container">
-            <span class="text-muted">&copy BucketMeadow, LLC</span>
-        </div>
-    </footer>
-
-    <script src="https://chancejs.com/chance.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
 </html>
