--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,6 @@
             </table>
         </form>
     </div>
-    <script src="../js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
